[tool.poetry]
name = "low-battery"
version = "0.1.0"
description = ""
authors = ["Toni Karppi <karppitoni@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
psutil = "^5.6"
pydub = "^0.23.1"

[tool.poetry.dev-dependencies]
black = { version = "*", allows-prereleases = true }
flake8 = "^3.7"
rope = "^0.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
